[gd_scene load_steps=9 format=3 uid="uid://ck261l1w5m2fe"]

[ext_resource type="Script" path="res://src/ui/menus/MainMenu.gd" id="1_14q78"]
[ext_resource type="Texture2D" uid="uid://7giba0syr5t8" path="res://assets/images/tile_ground_image.png" id="2_wllr1"]
[ext_resource type="StyleBox" path="res://assets/styles/button_styleline.tres" id="3_ajgrm"]
[ext_resource type="Texture2D" uid="uid://b01vo4k0mj46m" path="res://assets/images/close_button_image.png" id="3_cn70s"]
[ext_resource type="FontFile" uid="uid://ccrvwycdpdlcd" path="res://assets/fonts/tilt_neon_regular.ttf" id="3_k8jp3"]

[sub_resource type="Environment" id="1"]
background_mode = 3
glow_enabled = true
glow_levels/1 = 1.0
glow_levels/2 = 1.0
glow_levels/4 = 1.0
glow_levels/6 = 1.0
glow_levels/7 = 1.0
glow_blend_mode = 0

[sub_resource type="FontVariation" id="FontVariation_xmv5n"]

[sub_resource type="LabelSettings" id="LabelSettings_eq3as"]
font = SubResource("FontVariation_xmv5n")
font_size = 96

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_14q78")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("1")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.141176, 0.141176, 0.141176, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wllr1")
stretch_mode = 1

[node name="StartScreen" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartButton" type="Button" parent="StartScreen"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -220.0
offset_right = 256.0
offset_bottom = -28.0
theme_override_fonts/font = ExtResource("3_k8jp3")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("3_ajgrm")
action_mode = 0
text = "Start Game"
flat = true

[node name="SettingsButton" type="Button" parent="StartScreen"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -28.0
offset_right = 256.0
offset_bottom = 164.0
theme_override_fonts/font = ExtResource("3_k8jp3")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("3_ajgrm")
action_mode = 0
text = "Settings"

[node name="CreditsButton" type="Button" parent="StartScreen"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = 164.0
offset_right = 256.0
offset_bottom = 356.0
theme_override_fonts/font = ExtResource("3_k8jp3")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("3_ajgrm")
action_mode = 0
text = "Credits"

[node name="SettingsScreen" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MusicToggle" type="Button" parent="SettingsScreen"]
self_modulate = Color(1.5, 1, 1, 1)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -284.0
offset_right = 288.0
offset_bottom = -92.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_k8jp3")
theme_override_font_sizes/font_size = 80
toggle_mode = true
action_mode = 0
shortcut_in_tooltip = false
text = "Music"

[node name="SoundToggle" type="Button" parent="SettingsScreen"]
self_modulate = Color(1.5, 1, 1, 1)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -28.0
offset_right = 288.0
offset_bottom = 164.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_k8jp3")
theme_override_font_sizes/font_size = 80
toggle_mode = true
action_mode = 0
text = "Sound"

[node name="DarkGameToggle" type="Button" parent="SettingsScreen"]
self_modulate = Color(1.5, 1, 1, 1)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = 228.0
offset_right = 288.0
offset_bottom = 420.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_k8jp3")
theme_override_font_sizes/font_size = 80
toggle_mode = true
action_mode = 0
text = "Dark Game"

[node name="GameScreen" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SingleButton" type="Button" parent="GameScreen"]
self_modulate = Color(1, 1.5, 1, 1)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -704.0
offset_top = -28.0
offset_right = -128.0
offset_bottom = 164.0
theme_override_fonts/font = ExtResource("3_k8jp3")
theme_override_font_sizes/font_size = 80
action_mode = 0
text = "Single Player"

[node name="MultiButton" type="Button" parent="GameScreen"]
self_modulate = Color(1, 1.5, 1, 1)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -28.0
offset_right = 704.0
offset_bottom = 164.0
theme_override_fonts/font = ExtResource("3_k8jp3")
theme_override_font_sizes/font_size = 80
action_mode = 0
text = "Multiplayer"

[node name="CreditsScreen" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="."]
self_modulate = Color(1.5, 1, 1.5, 1)
layout_mode = 0
anchor_top = 0.059
anchor_right = 1.0
anchor_bottom = 0.178
offset_top = 0.279999
offset_bottom = -0.240005
theme_override_fonts/font = ExtResource("3_k8jp3")
text = "Title of the game"
label_settings = SubResource("LabelSettings_eq3as")
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -192.0
offset_top = 64.0
offset_right = -64.0
offset_bottom = 192.0
pivot_offset = Vector2(64, 64)
action_mode = 0
icon = ExtResource("3_cn70s")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="StartScreen/StartButton" to="." method="_on_Start_btn_pressed"]
[connection signal="pressed" from="StartScreen/SettingsButton" to="." method="_on_Settings_btn_pressed"]
[connection signal="pressed" from="StartScreen/CreditsButton" to="." method="_on_Credits_btn_pressed"]
[connection signal="toggled" from="SettingsScreen/MusicToggle" to="." method="_on_MusicToggle_toggled"]
[connection signal="toggled" from="SettingsScreen/SoundToggle" to="." method="_on_SoundToggle_toggled"]
[connection signal="toggled" from="SettingsScreen/DarkGameToggle" to="." method="_on_DarkGameToggle_toggled"]
[connection signal="pressed" from="GameScreen/SingleButton" to="." method="_on_Single_btn_pressed"]
[connection signal="pressed" from="GameScreen/MultiButton" to="." method="_on_Multi_btn_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_Close_btn_pressed"]
